--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,9 @@
-html, body {
-  height: 100%;
-  width: 100%;
+@import 'vars';
+@import 'typography';
+
+body {
+  font-family: Helvetica, sans-serif;
+  color: $font-color--dark;
+  background-color: $background--light;
+  padding: $half-space;
 }
