--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,1 +1,7 @@
-You are home! Number is <span class="number-example">{{ home.number }}</span>
+<h1 class="heading -large">{{ home.title }}</h1>
+
+<h3 class="heading -medium">Here is a fancy number served up courtesy of Angular: <span class="fancy-number">{{ home.number }}</span></h3>
+
+<img src="images/angular.png" height="100" />
+<img src="images/gulp.png" height="100" />
+<img src="images/browserify.png" height="100" />
