--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,8 +1,10 @@
 // colors
+$background-light: #fff;
+$background-dark: #E3E3E3;
+$background-top: #384350;
+
 $font-color--dark: #333;
 $font-color--light: #fff;
-$background--light: #eee;
-$background--dark: #222;
 $blue: #1f8de2;
 $green: #1fe27b;
 $red: #e21f3f;
