Clean the boilerplate base

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -3,15 +3,7 @@ $background-light: #fff;
 $background-dark: #E3E3E3;
 $background-top: #384350;
 
-$font-color--dark: #333;
-$font-color--light: #fff;
-$blue: #1f8de2;
-$green: #1fe27b;
-$red: #e21f3f;
-
-// spacing
-$full-space: 40px;
-$half-space: 20px;
+$border-light: #eee;
 
 // font sizing
 $font-size--xs: 10px;
