--- a/app/views/search.html
+++ b/app/views/search.html
@@ -30,4 +30,12 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque tempore delectus qui dolorem at, labore tenetur similique cumque dolores sunt repudiandae odio ullam, nesciunt, dolorum rerum adipisci quo. Hic, molestiae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur praesentium magni, quisquam, aliquid corrupti iure eos velit accusamus. Sit maxime quidem earum, ab ratione illo amet atque beatae ea soluta!</p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-3 side">
+            <ul class="side-block"></ul>
+        </div>
+        <div class="col-md-9 main">
+            <div ng-repeat="status in search.statuses" status data="status"></div>
+        </div>
+    </div>
 </div>
