--- a/app/views/about.html
+++ b/app/views/about.html
@@ -19,6 +19,9 @@
                 <li class="active">
                     <a href="about.html">About</a>
                 </li>
+                <li>
+                    <a href="/statistics">Statistics</a>
+                </li>
             </ul>
         </nav>
     </div>
