--- a/app/views/search.html
+++ b/app/views/search.html
@@ -19,6 +19,9 @@
                 <li>
                     <a href="/about">About</a>
                 </li>
+                <li>
+                    <a href="/statistics">Statistics</a>
+                </li>
             </ul>
         </nav>
     </div>
