--- a/app/views/search.html
+++ b/app/views/search.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="/statistics">Statistics</a>
                 </li>
+                <li>
+                    <a href="/eval">Evaluation</a>
+                </li>
             </ul>
         </nav>
     </div>
