--- a/app/views/about.html
+++ b/app/views/about.html
@@ -16,11 +16,14 @@
                 <li>
                     <a href="/">Home</a>
                 </li>
-                <li class="active">
+                <li >
                     <a href="about.html">About</a>
                 </li>
                 <li>
                     <a href="/statistics">Statistics</a>
+                </li>
+                <li class="active">
+                    <a href="/eval">Evaluation</a>
                 </li>
             </ul>
         </nav>
