--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -14,6 +14,9 @@
                 <li class="active">
                     <a href="statistics.html">Statistics</a>
                 </li>
+                <li>
+                    <a href="/search">Search</a>
+                </li>
             </ul>
         </nav>
     </div>
