--- a/app/views/about.html
+++ b/app/views/about.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="/statistics">Statistics</a>
                 </li>
+                <li>
+                    <a href="/search">Search</a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -29,6 +32,7 @@
 <div class="container">
     <div class="row">
         <h1 class="page-header">About</h1>
+        <img src="../img/1200x300.gif" alt="">
         <div class="col-lg-12 col-md-12 col-xs-12">
             <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati minima distinctio, suscipit facilis, temporibus et! Quas accusamus minima doloribus, reprehenderit hic, similique animi ex, tenetur, vel exercitationem nulla dicta laudantium.</h1>
              <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit rem omnis commodi, exercitationem aperiam tenetur perspiciatis sed est minima, beatae. Maxime fuga beatae assumenda minima pariatur ex aliquam aut quos.</h2>
