Add fixes to #10
Changed time resolution to 1 hour
Additional fixes to `cannot read 'length'` error

--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -37,7 +37,7 @@
                         </div>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker1">
-                        <datetimepicker ng-model="sinceDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select' }"></datetimepicker>
+                        <datetimepicker ng-model="sinceDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'hour' }"></datetimepicker>
                     </ul>
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
@@ -53,7 +53,7 @@
                         </div>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker2">
-                        <datetimepicker ng-model="untilDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select' }"></datetimepicker>
+                        <datetimepicker ng-model="untilDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select', minView: 'hour'  }"></datetimepicker>
                     </ul>
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
