a bit more space before the Date (I know that is bad style, however)

--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -29,7 +29,7 @@
                 <input type="text" class="form-control" ng-model="term">
             </div>
             <div class="form-group">
-                <label for="datetimepicker1">Date Since:</label>
+                &nbsp;&nbsp;<label for="datetimepicker1">Date Since:</label>
                 <div class="input-group dropdown">
                     <a class="dropdown-toggle my-toggle-select" id="datetimepicker1" role="button" data-toggle="dropdown" data-target="#" href="">
                         <div class="input-append">
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="datetimepicker2"> Date Until:</label>
+                &nbsp;&nbsp;<label for="datetimepicker2"> Date Until:</label>
                 <div class="input-group dropdown">
                     <a class="dropdown-toggle my-toggle-select" id="datetimepicker2" role="button" data-toggle="dropdown" data-target="#" href="">
                         <div class="input-append">
