Integrate histogram and stats, restructure vm.update to use only one query

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -66,11 +66,11 @@ body {
 		min-height: 42px;
 	}
 	margin-top: 50px;
-	padding-bottom: 15px;
+	padding: 15px;
 	h1 {
 		text-align: center;
 	}
-	border: 1px solid black;
+	border: 1px solid #b4b4b4;
 	border-radius: 7px;
 	.item {
 		position: relative;
