--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -29,7 +29,7 @@
                 <input type="text" class="form-control" ng-model="term">
             </div>
             <div class="form-group">
-                &nbsp;&nbsp;<label for="datetimepicker1">Date Since:</label>
+                &nbsp;<label for="datetimepicker1">Date Since:</label>
                 <div class="input-group dropdown">
                     <a class="dropdown-toggle my-toggle-select" id="datetimepicker1" role="button" data-toggle="dropdown" data-target="#" href="">
                         <div class="input-append">
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="form-group">
-                &nbsp;&nbsp;<label for="datetimepicker2"> Date Until:</label>
+                &nbsp;<label for="datetimepicker2"> Date Until:</label>
                 <div class="input-group dropdown">
                     <a class="dropdown-toggle my-toggle-select" id="datetimepicker2" role="button" data-toggle="dropdown" data-target="#" href="">
                         <div class="input-append">
@@ -69,10 +69,6 @@
     <div class="row">
         <barchart xkey="xkey" ykeys="ykeys" labels="labels" data-value="{{myModel}}"></barchart>
     </div>
-    <div class="row" ng-show="isValid">
-        <label for="shareLink">Share Link:</label>
-        <input type="text" class="form-control" id="shareLink" ng-model="shareLink">
-    </div>
     <div class="row container">
         <div class="content" ng-hide="hideAtInit">
             <div class="tweeters eval-widget col-xs-24 col-md-3">
@@ -88,5 +84,9 @@
                 <div ng-repeat="tag in topTags | limitTo:5" stat data="tag"></div>
             </div>
         </div>
+    </div>
+    <div class="row" ng-show="isValid">
+        <label for="shareLink">Share Link:</label>
+        <input type="text" class="form-control" id="shareLink" ng-model="shareLink">
     </div>
 </div>
