added documentation in home.html and about.html

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -32,8 +32,9 @@
 <div class="container">
     <div class="jumbotron">
         <div class="row">
-            <h1>Loklak Twitter Evaluation</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque tempore delectus qui dolorem at, labore tenetur similique cumque dolores sunt repudiandae odio ullam, nesciunt, dolorum rerum adipisci quo. Hic, molestiae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur praesentium magni, quisquam, aliquid corrupti iure eos velit accusamus. Sit maxime quidem earum, ab ratione illo amet atque beatae ea soluta!</p>
+            <h1><code>loklak</code></h1>
+            <h2>Mass Message (aka Tweets) Evaluation</h2>
+            <p>This is the front-end for the <a href="http://loklak.org">Distributed Message Search Server <code>loklak</code></a>. We collect Tweets and provide mass-data evaluation functions using search engine technology.</p>
         </div>
     </div>
 </div>
