--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,15 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Loklak</a>
-        </div>
-        <div id="navbar">
-            <form class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input type="text" placeholder="Search" class="form-control" ng-model="term">
-                </div>
-                <button type="submit" class="btn btn-success" ng-click="search.update(term)">Search</button>
-            </form>
+            <a class="navbar-brand" href="/"><code>loklak</code></a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse">
             <ul class="nav navbar-nav">
