--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Loklak</a>
+            <a class="navbar-brand" href="/"><code>loklak</code></a>
         </div>
         <div id="navbar">
         </div>
