--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Loklak</a>
+            <a class="navbar-brand" href="/"><code>loklak</code></a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse">
             <ul class="nav navbar-nav">
