--- a/app/views/status.html
+++ b/app/views/status.html
@@ -7,7 +7,10 @@
 			<small class="time" am-time-ago="data.created_at"></small>
 		</div>
 		<div class="content">
-			{{data.text}}
+			<div class="text">{{data.text}}</div>
+			<div class="images">
+				<img ng-repeat="image in data.images" ng-src="{{image}}"/>
+			</div>
 		</div>
 	</div>
 </div>
