--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,4 +1,4 @@
-<div class="row status">
+<div ng-class="highlight ? 'row status highlight' : 'row status'">
 	<div class="inner">
 		<div class="header">
 			<img ng-src="{{data.user.profile_image_url_https}}" class="user-avatar"/>
