--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,6 +34,21 @@ body {
 	border-bottom: 1px solid $border-light;
 	margin-bottom: 20px;
 
+	&.highlight {
+		.inner {
+			.header {
+				.user-avatar {
+					width: 100px;
+					height: 100px;
+				}
+			}
+
+			.content {
+				font-size: 20px;
+			}
+		}
+	}
+
 	.inner {
 		margin-left: 58px;
 
