Adds favicon icon and icon in navbar to the left side of loklak wording

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/"><code>loklak</code></a>
+            <img src="../images/loklak_icon_yellow_45x45.png" class="pull-left" alt="" width="30%" height="30%" style="margin-top:5px;">
+            <a class="navbar-brand pull-right" href="/">
+                <code>loklak</code>
+            </a>
         </div>
         <div id="navbar">
         </div>
