--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,10 +36,13 @@ body {
 
 	&.highlight {
 		.inner {
+			margin-left: 218px;
+
 			.header {
 				.user-avatar {
-					width: 100px;
-					height: 100px;
+					width: 200px;
+					height: 200px;
+					margin-left: -218px;
 				}
 			}
 
@@ -145,4 +148,56 @@ body {
 .date-input {
 	min-width: 275px;
 
+}
+
+.wall {
+	margin-top: -70px;
+}
+
+.wall-search {
+	width: 400px;
+	margin: 0 auto;
+	text-align: center;
+
+	form {
+		display: inline-block;
+	}
+}
+
+.wall-display {
+	h1 {
+		text-align: center;
+		font-size: 100px;
+	}
+
+	.status-list {
+		margin-top: 60px;
+	}
+}
+
+.animate-repeat.ng-enter, 
+.animate-repeat.ng-leave
+{ 
+	-webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	position: relative;
+	display: block;
+	overflow: hidden;
+	text-overflow: clip;
+	white-space:nowrap;
+} 
+
+.animate-repeat.ng-leave.ng-leave-active,
+.animate-repeat.ng-enter {
+	opacity: 0;
+	height: 0px;
+}
+
+.animate-repeat.ng-enter.ng-enter-active, 
+.animate-repeat.ng-leave {
+	opacity: 1;
+	height: 200px;
 }
