Change wording for wall title

--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -13,7 +13,7 @@
 						</form>
 					</div>
 					<div ng-if="!displaySearch" class="wall-display">
-						<h1>{{wall.term}}</h1>
+						<h1>Wall for {{wall.term}}</h1>
 						<div class="status-list">
 							<div ng-repeat="status in wall.statuses | orderBy: '-created_at'" class="animate-repeat" status data="status" highlight="$first"></div>
 						</div>
