Fix displaySearch condition

--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -12,7 +12,7 @@
 							<button type="submit" class="btn btn-success" ng-click="wall.update(term)">Show Tweets</button>
 						</form>
 					</div>
-					<div ng-if="!displaySearch" class="wall-display">
+					<div ng-if="!wall.displaySearch" class="wall-display">
 						<h1>Wall for {{wall.term}}</h1>
 						<div class="status-list">
 							<div ng-repeat="status in wall.statuses | orderBy: '-created_at'" class="animate-repeat" status data="status" highlight="$first"></div>
