added wall to menu

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -19,6 +19,9 @@
                 <li>
                     <a href="/statistics">Statistics</a>
                 </li>
+                <li>
+                    <a href="/wall">Wall</a>
+                </li>
                 <li class="active">
                     <a href="/search">Search</a>
                 </li>
