--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -18,6 +18,9 @@
                     <a href="statistics.html">Statistics</a>
                 </li>
                 <li>
+                    <a href="/wall">Wall</a>
+                </li>
+                <li>
                     <a href="/search">Search</a>
                 </li>
             </ul>
