--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -1,26 +1,42 @@
 <div class="container">
-	<div class="row">
-		<div class="col-md-12 main wall">
-			<div class="container">
-				<div class="row">
-                	<div ng-if="wall.displaySearch" class="wall-search">
-                    	<h1>Search</h1>
-						<form class="form-inline form-search">
-							<div class="form-group">
-								<input type="text" class="form-control" ng-model="term" placeholder="Search term">
-						 	</div>
-							<button type="submit" class="btn btn-success" ng-click="wall.update(term)">Show Tweets</button>
-						</form>
-					</div>
-					<div ng-if="!wall.displaySearch" class="wall-display">
-						<h1>Wall for {{wall.term}}</h1>
-						<button type="button" class="btn btn-primary" onClick="window.location.reload();" style="text-align:center;margin-left:45%;">Make another search</button>
-						<div class="status-list">
-							<div ng-repeat="status in wall.statuses | orderBy: '-created_at'" class="animate-repeat" status data="status" highlight="$first"></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+ 	<div class="row">
+ 		<div class="col-md-12 main wall">
+ 			<div class="container">
+ 				<div class="row">
+ 					<div id="sidebar-wrapper" style="magin-top:-70px;">
+ 						<ul class="sidebar-nav">
+ 							<li class="sidebar-brand">
+ 								<a href="#">
+ 									<div class="row col-md-offset-0" style="text-align:left;">
+	 									<img src="../images/loklak_icon_yellow.png" alt="" width="90%" style="padding:10px;">
+	 									<h1><code>Loklak</code> Wall</h1>
+ 									</div>
+ 								</a>
+ 							</li>
+ 						</ul>
+ 					</div>
+ 					<div id="page-content-wrapper" style="margin-left:10%">
+ 						<div class="container">
+		 					<div ng-if="wall.displaySearch" class="wall-search">
+		 						<h1>Search</h1>
+		 						<form class="form-inline form-search">
+		 							<div class="form-group">
+		 								<input type="text" class="form-control" ng-model="term" placeholder="Search term">
+		 							</div>
+		 							<button type="submit" class="btn btn-success" ng-click="wall.update(term)">Show Tweets</button>
+		 						</form>
+		 					</div>
+		 					<div ng-if="!wall.displaySearch" class="wall-display">
+		 						<h1>Wall for {{wall.term}}</h1>
+		 						<button type="button" class="btn btn-primary" onClick="window.location.reload();" style="text-align:center;margin-left:45%;">Make another search</button>
+		 						<div class="status-list">
+		 							<div ng-repeat="status in wall.statuses | orderBy: '-created_at'" class="animate-repeat" status data="status" highlight="$first"></div>
+		 						</div>
+		 					</div>
+	 					</div>
+ 					</div>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</div>
+ </div>
