--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -9,8 +9,9 @@
  								<a href="#">
  									<div class="row col-md-offset-0" style="text-align:left;">
 	 									<img src="../images/loklak_icon_yellow.png" alt="" width="90%" style="padding:10px;">
-	 									<h1><code>Loklak</code> Wall</h1>
-	 									<h2 ng-if="!wall.displaySearch">for <em>{{wall.term}}</em></h2>
+	 									<h1 ng-if="wall.displaySearch"><code>loklak</code> wall</h1>
+	 									<h1 ng-if="!wall.displaySearch"><code>loklak</code>.net</h1>
+	 									<h2 ng-if="!wall.displaySearch">wall for <em>{{wall.term}}</em></h2>
  									</div>
  								</a>
  							</li>
