--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -66,27 +66,22 @@ body {
 				-moz-force-broken-image-icon: 1;
 			}
 		}
-
-		.content {
-			.images {
-				padding: 0 25%;
-
-				img {
-					display: block;
-					width: 100%;
-					margin: 20px 0;
-					-webkit-border-radius: 4px;
-				    -moz-border-radius: 4px;
-				    -khtml-border-radius: 4px;
-				    border-radius: 4px;
-				}
-			}
-		}
 	}
 }
 
 
+.masonry-brick{
+	width: 33.2%;
+}
 
+.masonry-brick img{
+	display: block;
+  	width: 100.5%;
+	-webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -khtml-border-radius: 4px;
+    border-radius: 4px;  	
+}
 
 .evaluation {
 	> div.row {
