--- a/app/views/status.html
+++ b/app/views/status.html
@@ -8,8 +8,10 @@
 		</div>
 		<div class="content">
 			<div class="text">{{data.text}}</div>
-			<div class="images">
-				<img ng-repeat="image in data.images" ng-src="{{image}}"/>
+			<div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick" >	
+			    <div class="masonry-brick" ng-repeat="image in data.images">
+			        <img class="masonry-image" ng-src="{{image}}" alt="A masonry brick">
+			    </div>
 			</div>
 		</div>
 		<div class="clearfix"></div>
