--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -72,6 +72,7 @@ body {
 
 .masonry-brick{
 	width: 33.2%;
+	padding: 10px;
 }
 
 .masonry-brick img{
@@ -80,7 +81,7 @@ body {
 	-webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -khtml-border-radius: 4px;
-    border-radius: 4px;  	
+    border-radius: 4px;
 }
 
 .evaluation {
