--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -59,6 +59,7 @@
                         </div>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="datetimepicker2">
+                        <datetimepicker ng-required="true" ng-model="untilDate" data-datetimepicker-config="{ dropdownSelector: '.my-toggle-select1', minView: 'hour', minDate: '{{sinceDate}}'}"></datetimepicker>
                     </ul>
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
