--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,7 +1,7 @@
 <div ng-class="highlight ? 'status highlight' : 'status'">
 	<div class="inner">
 		<div class="header">
-			<img ng-src="{{data.user.profile_image_url_https}}" class="user-avatar"/>
+			<img ng-src="{{data.user.profile_image_url}}" class="user-avatar"/>
 			<strong class="user-fullname">{{data.user.name}}</strong>
 			<span class="user-username">@{{data.user.screen_name}}</span>
 			<small class="time" am-time-ago="data.created_at"></small>
