--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,4 +1,4 @@
-<div ng-class="highlight ? 'status highlight' : 'status'">
+<div ng-attr-id="{{data.id_str}}" ng-class="highlight ? 'status highlight' : 'status'">
 	<div class="inner">
 		<div class="header">
 			<img ng-src="{{data.user.profile_image_url_https}}" class="user-avatar"/>
@@ -8,7 +8,7 @@
 		</div>
 		<div class="content">
 			<div class="text">{{data.text}}</div>
-			<div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick" >	
+			<div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick" ng-class="'masonry-' + data.id_str">	
 			    <div class="masonry-brick" ng-repeat="image in data.images">
 			        <img class="masonry-image" ng-src="{{image}}" alt="A masonry brick">
 			    </div>
