--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-keyup="wall.resumeInterval($event)" tabindex="1">
  	<div class="row">
  		<div class="col-md-12 main wall">
  			<div class="container">
@@ -30,7 +30,7 @@
 		 					</div>
 		 					<div ng-if="!wall.displaySearch" class="wall-display">
 		 						<div class="status-list">
-		 							<div ng-repeat="status in wall.statuses | orderBy: '-created_at'" class="animate-repeat" status data="status" highlight="$first" wall="wall"></div>
+		 							<div ng-repeat="status in wall.statuses | orderBy: '-created_at'" class="animate-repeat" status open="wall.open" data="status" highlight="$first" wall="wall"></div>
 		 						</div>
 		 					</div>
 	 					</div>
