Moved Morrisjs & RaphaelJS libs to statistics page
Also removed repeat declaration of jquery

--- a/app/views/statistics.html
+++ b/app/views/statistics.html
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+<script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
