--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,315 +3,414 @@
 
 @import 'loader';
 
-body {
-  font-family: Helvetica, sans-serif;
-  background-color: $background-light;
-  margin-top: 70px;
-}
 
-.navbar {
-	background-color: $background-top;
-	border: 0;
-
-	.navbar-brand {
-		color: #fff;
+/* Old styles */
+	body {
+	  font-family: Helvetica, sans-serif;
+	  background-color: $background-light;
+	  margin-top: 70px;
 	}
-}
 
-.side {
-	.side-block {
-		background-color: $background-dark;
-		-moz-border-radius: 4px;
-		-webkit-border-radius: 4px;
-		border-radius: 4px;
-		-khtml-border-radius: 4px;
-		padding: 20px;
+
+
+	.navbar {
+		background-color: $background-top;
+		border: 0;
+
+		.navbar-brand {
+			color: #fff;
+		}
 	}
-}
 
-.status {
-	padding-bottom: 10px;
-	border-bottom: 1px solid $border-light;
-	margin-bottom: 20px;
+	.side {
+		.side-block {
+			background-color: $background-dark;
+			-moz-border-radius: 4px;
+			-webkit-border-radius: 4px;
+			border-radius: 4px;
+			-khtml-border-radius: 4px;
+			padding: 20px;
+		}
+	}
 
-	&.highlight {
+	.status {
+		padding-bottom: 10px;
+		border-bottom: 1px solid $border-light;
+		margin-bottom: 20px;
+
+		&.highlight {
+			.inner {
+				margin-left: 218px;
+
+				.header {
+					.user-avatar {
+						width: 200px;
+						height: 200px;
+						margin-left: -218px;
+					}
+				}
+
+				.content {
+					font-size: 20px;
+				}
+			}
+		}
+
 		.inner {
-			margin-left: 218px;
+			margin-left: 58px;
 
 			.header {
 				.user-avatar {
-					width: 200px;
-					height: 200px;
-					margin-left: -218px;
+					float: left;
+					margin-top: 3px;
+					margin-left: -58px;
+					width: 48px;
+					height: 48px;
+					border-radius: 5px;
+					-moz-force-broken-image-icon: 1;
 				}
 			}
-
-			.content {
-				font-size: 20px;
-			}
 		}
 	}
 
-	.inner {
-		margin-left: 58px;
 
-		.header {
-			.user-avatar {
-				float: left;
-				margin-top: 3px;
-				margin-left: -58px;
-				width: 48px;
-				height: 48px;
-				border-radius: 5px;
-				-moz-force-broken-image-icon: 1;
-			}
+	.masonry-brick{
+		width: 33.2%;
+		padding: 5px;
+	}
+
+	.masonry-brick img{
+		display: block;
+	  	width: 100.5%;
+		-webkit-border-radius: 4px;
+	    -moz-border-radius: 4px;
+	    -khtml-border-radius: 4px;
+	    border-radius: 4px;
+	}
+
+	.evaluation {
+		> div.row {
+			text-align: center;
+		}
+		form {
+			display: inline-block;
 		}
 	}
-}
+	.eval-widget {
+		.item {
+			min-height: 42px;
+		}
+		margin-top: 50px;
+		padding: 15px;
+		h1 {
+			text-align: center;
+		}
+		border: 1px solid #b4b4b4;
+		border-radius: 7px;
+		.item {
+			position: relative;
+			margin-top: 11px;
+		}
+		p {
+			display: inline-block;
+			position: relative;
+			z-index: 200;
+			font-size: 16px;
+			margin-top: 10px;
+			margin-left: 25px;
+		}
+		.percentage {
+			float: right;
+			display: inline-block;
+			position: relative;
+			z-index: 200;
+			font-size: 16px;
+			margin-top: 10px;
+			margin-right: 15px;
+		}
+		.percent-bar {
+			position: absolute;
+			z-index: 100;
+			left: 15px;
+			height: 100%;
+			border-radius: 5px;
+		}
+	}
+	.tweeters .percent-bar {
+		background-color: #9BD5BB;
+	}
+	.mentions .percent-bar {
+		background-color: #87AFCC;
+	}
+	.tags .percent-bar {
+		background-color: #D6A6BC;
+	}
+	.date-input {
+		min-width: 275px;
 
+	}
 
-.masonry-brick{
-	width: 33.2%;
-	padding: 5px;
-}
+	.wall {
+		margin-top: -70px;
+	}
 
-.masonry-brick img{
-	display: block;
-  	width: 100.5%;
-	-webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -khtml-border-radius: 4px;
-    border-radius: 4px;
-}
-
-.evaluation {
-	> div.row {
+	.wall-search {
+		width: 400px;
+		margin: 0 auto;
 		text-align: center;
+
+		form {
+			display: inline-block;
+		}
 	}
-	form {
-		display: inline-block;
+
+	.wall-display {
+		h1 {
+			text-align: center;
+			font-size: 100px;
+		}
+
+		.status-list {
+			margin-top: 60px;
+		}
 	}
-}
-.eval-widget {
-	.item {
-		min-height: 42px;
-	}
-	margin-top: 50px;
-	padding: 15px;
-	h1 {
-		text-align: center;
-	}
-	border: 1px solid #b4b4b4;
-	border-radius: 7px;
-	.item {
+
+	.animate-repeat.ng-enter, 
+	.animate-repeat.ng-leave
+	{ 
+		-webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+		-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+		-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+		-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+		transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
 		position: relative;
-		margin-top: 11px;
-	}
-	p {
-		display: inline-block;
-		position: relative;
-		z-index: 200;
-		font-size: 16px;
-		margin-top: 10px;
-		margin-left: 25px;
-	}
-	.percentage {
-		float: right;
-		display: inline-block;
-		position: relative;
-		z-index: 200;
-		font-size: 16px;
-		margin-top: 10px;
-		margin-right: 15px;
-	}
-	.percent-bar {
-		position: absolute;
-		z-index: 100;
-		left: 15px;
-		height: 100%;
-		border-radius: 5px;
-	}
-}
-.tweeters .percent-bar {
-	background-color: #9BD5BB;
-}
-.mentions .percent-bar {
-	background-color: #87AFCC;
-}
-.tags .percent-bar {
-	background-color: #D6A6BC;
-}
-.date-input {
-	min-width: 275px;
+		display: block;
+		overflow: hidden;
+		text-overflow: clip;
+		white-space:nowrap;
+	} 
 
-}
-
-.wall {
-	margin-top: -70px;
-}
-
-.wall-search {
-	width: 400px;
-	margin: 0 auto;
-	text-align: center;
-
-	form {
-		display: inline-block;
-	}
-}
-
-.wall-display {
-	h1 {
-		text-align: center;
-		font-size: 100px;
+	.animate-repeat.ng-leave.ng-leave-active,
+	.animate-repeat.ng-enter {
+		opacity: 0;
+		height: 0px;
 	}
 
-	.status-list {
-		margin-top: 60px;
+	.animate-repeat.ng-enter.ng-enter-active, 
+	.animate-repeat.ng-leave {
+		opacity: 1;
+		height: 200px;
 	}
-}
 
-.animate-repeat.ng-enter, 
-.animate-repeat.ng-leave
-{ 
-	-webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	position: relative;
-	display: block;
-	overflow: hidden;
-	text-overflow: clip;
-	white-space:nowrap;
-} 
-
-.animate-repeat.ng-leave.ng-leave-active,
-.animate-repeat.ng-enter {
-	opacity: 0;
-	height: 0px;
-}
-
-.animate-repeat.ng-enter.ng-enter-active, 
-.animate-repeat.ng-leave {
-	opacity: 1;
-	height: 200px;
-}
-
-#wrapper {
-	padding-left: 0;
-	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-	padding-left: 250px;
-}
-
-#sidebar-wrapper {
-	z-index: 1000;
-	position: fixed;
-	left: 250px;
-	width: 0;
-	height: 100%;
-	margin-left: -250px;
-	overflow-y: auto;
-	background: #000;
-	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-	width: 250px;
-}
-
-#page-content-wrapper {
-	width: 100%;
-	position: absolute;
-	padding: 15px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-	position: absolute;
-	margin-right: -250px;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-	position: absolute;
-	top: 0;
-	width: 250px;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-.sidebar-nav li {
-	text-indent: 20px;
-	line-height: 40px;
-}
-
-.sidebar-nav li a {
-	display: block;
-	text-decoration: none;
-	color: #999999;
-}
-
-.sidebar-nav li a:hover {
-	text-decoration: none;
-	color: #fff;
-	background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-	text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-	height: 65px;
-	font-size: 18px;
-	line-height: 60px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-	color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-	color: #fff;
-	background: none;
-}
-
-@media(min-width:768px) {
 	#wrapper {
-		padding-left: 250px;
+		padding-left: 0;
+		-webkit-transition: all 0.5s ease;
+		-moz-transition: all 0.5s ease;
+		-o-transition: all 0.5s ease;
+		transition: all 0.5s ease;
 	}
 
 	#wrapper.toggled {
-		padding-left: 0;
+		padding-left: 250px;
 	}
 
 	#sidebar-wrapper {
-		width: 250px;
+		z-index: 1000;
+		position: fixed;
+		left: 250px;
+		width: 0;
+		height: 100%;
+		margin-left: -250px;
+		overflow-y: auto;
+		background: #000;
+		-webkit-transition: all 0.5s ease;
+		-moz-transition: all 0.5s ease;
+		-o-transition: all 0.5s ease;
+		transition: all 0.5s ease;
 	}
 
 	#wrapper.toggled #sidebar-wrapper {
-		width: 0;
+		width: 250px;
 	}
 
 	#page-content-wrapper {
-		padding: 20px;
-		position: relative;
+		width: 100%;
+		position: absolute;
+		padding: 15px;
 	}
 
 	#wrapper.toggled #page-content-wrapper {
-		position: relative;
-		margin-right: 0;
+		position: absolute;
+		margin-right: -250px;
 	}
+
+	/* Sidebar Styles */
+
+	.sidebar-nav {
+		position: absolute;
+		top: 0;
+		width: 250px;
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+
+	.sidebar-nav li {
+		text-indent: 20px;
+		line-height: 40px;
+	}
+
+	.sidebar-nav li a {
+		display: block;
+		text-decoration: none;
+		color: #999999;
+	}
+
+	.sidebar-nav li a:hover {
+		text-decoration: none;
+		color: #fff;
+		background: rgba(255,255,255,0.2);
+	}
+
+	.sidebar-nav li a:active,
+	.sidebar-nav li a:focus {
+		text-decoration: none;
+	}
+
+	.sidebar-nav > .sidebar-brand {
+		height: 65px;
+		font-size: 18px;
+		line-height: 60px;
+	}
+
+	.sidebar-nav > .sidebar-brand a {
+		color: #999999;
+	}
+
+	.sidebar-nav > .sidebar-brand a:hover {
+		color: #fff;
+		background: none;
+	}
+
+	@media(min-width:768px) {
+		#wrapper {
+			padding-left: 250px;
+		}
+
+		#wrapper.toggled {
+			padding-left: 0;
+		}
+
+		#sidebar-wrapper {
+			width: 250px;
+		}
+
+		#wrapper.toggled #sidebar-wrapper {
+			width: 0;
+		}
+
+		#page-content-wrapper {
+			padding: 20px;
+			position: relative;
+		}
+
+		#wrapper.toggled #page-content-wrapper {
+			position: relative;
+			margin-right: 0;
+		}
+	}
+
+/* Styling for SEARCH FRONT END */
+
+.search-container {
+
+	// Helper classes
+	.abs-center-y {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+	}
+	.abs-center-x {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		-ms-transform: translateX(-50%);
+		-webkit-transform: translateX(-50%);
+	}
+	.abs-center {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		-webkit-transform: translate(-50%, -50%);
+	}
+
+	// Generals
+	margin-top: -70px; // Compensate to body margin top
+	
+
+	// Header 
+	.header-container {
+		position: absolute;
+		width: 100%;
+		border-bottom: 1px solid rgba(0,0,0,0.05);
+		.container > * {
+			vertical-align: middle;
+		}
+
+		.container {
+			height: 46px;
+		}
+		.logo {
+			margin-top: 8px;
+			margin-left: 8px;
+			height: 30px;
+			width: 30px;
+		}
+		.toggle-login, .simple-search-form {
+			display: inline-block;
+			position: relative;
+			height: 100%;
+		}
+		.toggle-login {
+			min-width: 200px;
+			p {
+				width: 100%;
+				text-align: right;
+				padding-right: 10px;
+			}
+		}
+
+		.simple-search {
+			display: block;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+			margin-top: 6px;
+			width: 180px;
+			height: 32px;
+			padding: 5px 27px 6px 12px;
+			border: 1px solid #e1e8ed;
+			border-radius: 21px;
+			color: #292f33;
+			background-color: #f5f8fa;
+		}	
+	}
+
+	// Content
+	.content-container {
+		padding-top: 56px;
+	}
+
 }
+
+
+
+
+
+
+
+
+
